--- a/ACL4SSR.ini
+++ b/ACL4SSR.ini
@@ -10,6 +10,7 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
+ruleset=🎇 Anthropic,https://raw.githubusercontent.com/Ghost233/tailscaleconf/refs/heads/main/anthropic.list
 ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=🎯 Github Copilot,https://raw.githubusercontent.com/Ghost233/tailscaleconf/refs/heads/main/githubcopilot.list
